kube/deployment-spring-jibv1.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2019-10-27T10:35:27Z"
    generation: 1
    labels:
      app: spring-jibv1
    name: spring-jibv1
    namespace: default
    resourceVersion: "25281"
    selfLink: /apis/apps/v1/namespaces/default/deployments/spring-jibv1
    uid: 66c3e514-c36b-45b8-be0d-9f1ca1793312
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: spring-jibv1
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: spring-jibv1
      spec:
        containers:
        - image: docker.io/mvamax/spring-jib:v1
          imagePullPolicy: IfNotPresent
          name: spring-jib
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2019-10-27T10:35:30Z"
      lastUpdateTime: "2019-10-27T10:35:30Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2019-10-27T10:35:27Z"
      lastUpdateTime: "2019-10-27T10:35:30Z"
      message: ReplicaSet "spring-jibv1-8456687574" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
