kube/service-spring-jibv2.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-jibv2
spec:
  selector:
    app: spring-jibv2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  sessionAffinity: None
  type: NodePort
