kube/example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: api.gateway
    http:
      paths:
      - path: /v1/*
        backend:
          serviceName: spring-jibv1
          servicePort: 8080
