kube/ingress-spring-jib-v2.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: spring-jibv2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: api.gateway
    http:
      paths:
      - path: /v2/*
        backend:
          serviceName: spring-jibv2
          servicePort: 8080
